# octopus

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  TODO.md
.agents/plugins/: marketplace.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: octopus-migrate
.codex-plugin/: plugin.json
.github/workflows/: release.yml  test.yml
.octopus/: activity.md  memory.md
.octopus/handoffs/: 2026-05-23-request-04-closed-next-is-readme-commit-new.md
.octopus/sessions/: 2026-05-23-request-04-dogfood-pass.md
.spectacular/: AGENTS.md  DECISIONS.md  PRD.md  SPEC.md  STACK.md  config.yaml
.spectacular/decisions/: D1.md  D10.md  D100.md  D101.md  D102.md  D103.md  D104.md  D105.md  D106.md  D107.md  D108.md  D109.md  D11.md  D110.md  D111.md  D12.md  D13.md  D14.md  D15.md  D16.md  D17.md  D18.md  D19.md  D2.md  D20.md  D21.md  D22.md  D23.md  D24.md  D25.md  D26.md  D27.md  D28.md  D29.md  D3.md  D30.md  D31.md  D32.md  D33.md  D34.md  (+29 more)
.spectacular/specs/: AXIS-MODEL.md  CLI-VERBS.md  CRITICAL-DEPENDENCIES.md  SCHEMA-ACTIVITY.md  SCHEMA-ADAPTER.md  (+9 more)
agents/: octopus-context-loader.md  octopus-handoff-writer.md  octopus-session-keeper.md
assets/: palette.md
cli/: README.md  pyproject.toml
cli/src/octopus/: __init__.py  __main__.py  actions.py  cli.py  config.py  diagnose.py  promotion.py
cli/src/octopus/adapters/: __init__.py  _reminders_io.py  base.py  journal.py  obsidian.py  pipeline.py  registry.py  reminders.py  todo_md.py
cli/src/octopus/core/: __init__.py  id.py  identify.py  logging.py  models.py  ranking.py  refs.py  slug.py  slug_rename.py  tag_parser.py
cli/src/octopus/db/: __init__.py  connection.py  queries.py  reindex.py  schema.sql  stale.py  sync.py  upsert.py
cli/src/octopus/fs/: __init__.py  discover.py  io.py  scaffold.py
cli/src/octopus/handoffs/: __init__.py  io.py
cli/src/octopus/lint/: __init__.py  cli_output.py  findings.py  registry.py  runner.py
cli/src/octopus/lint/rules/: __init__.py  bucket_blocked.py  bucket_match.py  corrupt_frontmatter.py  dangling_blocker.py  slug_match.py  slug_shape.py  stale_done.py  start_without_now.py  subtask_cross_activity.py  subtask_depth.py  subtask_orphan.py
cli/src/octopus/memory/: __init__.py  io.py  sections.py
cli/src/octopus/sessions/: __init__.py  cache.py  io.py  lifecycle.py
cli/src/octopus/tui/: __init__.py  activities_screen.py  app.py  board.py  edit_modal.py  filter_bar.py  focus.py  header_bar.py  help.py  icons.py  keymap_bar.py  mascot.py  mascot_frames.py  overlay.py  prompts.py  status_bar.py  theme.tcss  toast.py
cli/src/octopus/tui/state/: __init__.py  model.py  persistence.py  resolve.py
cli/tests/: conftest.py  test_actions.py  test_adapter_reminders.py  test_adapter_todo_md.py  test_adapters.py  test_capture_edit_polish.py  test_cross_activity_reads.py  test_cross_activity_writes.py  test_d110_gitignore_selfheal.py  test_d111_octopus_version_stamp.py  test_db_queries.py  test_db_reindex.py  test_db_stale.py  test_db_upsert.py  test_diagnose.py  test_handoffs_io.py  test_handoffs_session_link.py  test_id.py  test_index_hygiene.py  test_logging.py  test_mascot_animation.py  test_memory_append.py  test_memory_hand_edit.py  test_memory_sections.py  test_memory_show.py  test_memory_summary.py  test_models.py  test_promote.py  test_ranking.py  test_roundtrip.py  test_sessions_cache.py  test_sessions_lifecycle.py  test_sessions_log_no_active.py  test_sessions_multi_open.py  test_sessions_prune.py  test_sessions_show.py  test_slug.py  test_subtasks.py  test_tag_parser.py  test_tui_board.py  (+4 more)
cli/tests/lint/: conftest.py  test_rules.py
cli/tests/tui/: test_activities_overview.py
cli/tests/tui/state/: test_state.py
commands/: end.md  handoff.md  log.md  memory.md  start.md  where.md
docs/: KEYS.md  REPO-LAYOUT.md  ROADMAP.md  TUI.md
hooks/: hooks-codex.json  hooks.json
scripts/: migrate-d110-last-known-path.py
(+145 files in other folders)
