[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "octopus-cli"
version = "0.0.1"
description = "A folder-native task system. Local-first project and task orchestration."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alessandro Smedile" }]
keywords = ["tasks", "productivity", "local-first", "obsidian", "cli"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "typer>=0.12.0",
    "python-frontmatter>=1.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-snapshot>=0.9",
    "ruff>=0.4",
]

[project.scripts]
octopus = "octopus.cli:app"
octo = "octopus.cli:app"

[project.urls]
Homepage = "https://github.com/alexsmedile/octopus"
Issues = "https://github.com/alexsmedile/octopus/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/octopus"]

[tool.hatch.build.targets.wheel.force-include]
"src/octopus/db/schema.sql" = "octopus/db/schema.sql"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
